Fix padding issues on small screen.
I applied solution #2 of this article https://css-tricks.com/multi-line-padded-text.

--- a/mon-pix/app/styles/globals/_text.scss
+++ b/mon-pix/app/styles/globals/_text.scss
@@ -22,7 +22,7 @@
    margin-bottom: 20px;
    position: relative;
    z-index: 1;
- 
+
    &:before {
      border-top: 2px solid #dfdfdf;
      content:"";
@@ -32,12 +32,14 @@
      width: 100%;
      z-index: -1;
    }
- 
+
    span {
      background: $color;
-     padding: 0 15px;
+     display: inline;
+     box-shadow: 15px 0 0 $color, -15px 0 0 $color;
+     box-decoration-break: clone;
    }
- 
+
    @include device-is('desktop') {
      font-size: 1.375rem;
      line-height: 26px;
